--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -4,9 +4,9 @@ jobs:
   Checks:
     runs-on: ubuntu-latest
     steps:
-      uses: actions/checkout@v3
-      name: Run checks
-      run: npx tsc -p tsconfig.json --noEmit
-      run: npx eslint --cache --fix
-      run: npx prettier --check ./src
-      run: echo "🍏 Done"
+      - uses: actions/checkout@v3
+      - name: Run checks
+      - run: npx tsc -p tsconfig.json --noEmit
+      - run: npx eslint --cache --fix
+      - run: npx prettier --check ./src
+      - run: echo "🍏 Done"
