--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -1,12 +1,12 @@
 name: Pull Request Action
 on: [pull_request]
 jobs:
-  Checks:
+  checks:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
       - name: Run checks
-      - run: npx tsc -p tsconfig.json --noEmit
+        run: npx tsc -p tsconfig.json --noEmit
       - run: npx eslint --cache --fix
       - run: npx prettier --check ./src
       - run: echo "🍏 Done"
