--- a/package.json
+++ b/package.json
@@ -45,16 +45,17 @@
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.49.0",
     "eslint": "^8.33.0",
+    "eslint-config-airbnb": "^19.0.4",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-airbnb-typescript": "^17.0.0",
+    "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-prettier": "^4.2.1",
     "husky": ">=6",
-    "eslint-config-airbnb": "^19.0.4",
-    "eslint-config-prettier": "^8.6.0",
     "is-ci": "^3.0.1",
     "lint-staged": ">=10",
-    "prettier": "^2.8.3"
+    "prettier": "^2.8.3",
+    "tailwindcss": "^3.2.4"
   },
   "lint-staged": {
     "*.ts?(x)": [
