--- a/package.json
+++ b/package.json
@@ -10,13 +10,16 @@
     "@types/node": "^16.7.13",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
+    "buffer": "^6.0.3",
     "classnames": "^2.3.2",
+    "ethers": "^5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-otp-input": "^2.4.0",
     "react-router-dom": "6.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
+    "wagmi": "^0.11.5",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
