--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "classnames": "^2.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.0",
     "react-otp-input": "^2.4.0",
     "react-router-dom": "6.0",
     "react-scripts": "5.0.1",
