--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@pancakeswap/sdk": "^3.1.4",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
@@ -65,6 +66,9 @@
     "lint-staged": ">=10",
     "prettier": "^2.8.3",
     "tailwindcss": "^3.2.4"
+  },
+  "peerDependencies": {
+    "@wagmi/core": "0.9.5"
   },
   "lint-staged": {
     "*.ts?(x)": [
