--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
     "@types/react-dom": "^18.0.0",
     "classnames": "^2.3.2",
     "react": "^18.2.0",
+    "react-data-table-component": "^7.5.3",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.0",
     "react-otp-input": "^2.4.0",
     "react-router-dom": "6.0",
     "react-scripts": "5.0.1",
     "react-select": "^5.7.0",
+    "styled-components": "^5.3.6",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.0"
   },
