--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "buffer": "^6.0.3",
     "classnames": "^2.3.2",
     "ethers": "^5",
+    "jsbi": "^4.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-otp-input": "^2.4.0",
@@ -33,6 +34,7 @@
     "prettier": "prettier --write --ignore-unknown --cache ./src",
     "eslint": "eslint ./src"
   },
+  "postinstall": "typechain --target ethers-v5 --out-dir ./src/utils/abis/types './src/utils/abis/contracts/*'",
   "eslintConfig": {
     "extends": [
       "react-app",
@@ -52,6 +54,7 @@
     ]
   },
   "devDependencies": {
+    "@typechain/ethers-v5": "^10.2.0",
     "@types/react-router-dom": "^5.3.3",
     "@typescript-eslint/eslint-plugin": "^5.49.0",
     "eslint": "^8.33.0",
@@ -65,7 +68,8 @@
     "is-ci": "^3.0.1",
     "lint-staged": ">=10",
     "prettier": "^2.8.3",
-    "tailwindcss": "^3.2.4"
+    "tailwindcss": "^3.2.4",
+    "typechain": "^8.1.1"
   },
   "peerDependencies": {
     "@wagmi/core": "0.9.5"
