--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/node": "^16.7.13",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
+    "big.js": "^6.2.1",
     "buffer": "^6.0.3",
     "classnames": "^2.3.2",
     "ethers": "^5",
@@ -23,6 +24,8 @@
     "react-router-dom": "6.0",
     "react-scripts": "5.0.1",
     "react-select": "^5.7.0",
+    "tiny-invariant": "^1.3.1",
+    "toformat": "^2.0.0",
     "typescript": "^4.9.5",
     "validator": "^13.9.0",
     "wagmi": "^0.11.5",
@@ -58,6 +61,7 @@
     ]
   },
   "devDependencies": {
+    "@types/big.js": "^6.1.6",
     "@typechain/ethers-v5": "^10.2.0",
     "@types/react-router-dom": "^5.3.3",
     "@types/react-select": "^5.0.1",
