--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "@types/node": "^16.7.13",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
+    "axios": "^1.3.4",
     "big.js": "^6.2.1",
     "buffer": "^6.0.3",
     "classnames": "^2.3.2",
     "ethers": "^5",
+    "jotai": "^2.0.2",
     "jsbi": "^4.3.0",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
