--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "prepare": "!is-ci || husky install",
+    "prepare": "is-ci || husky install",
     "typecheck": "tsc --project tsconfig.json --noEmit",
     "prettier": "prettier --write --ignore-unknown --cache ./src",
     "eslint": "eslint ./src"
