--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@pancakeswap/sdk": "^3.1.4",
+    "@reduxjs/toolkit": "^1.9.3",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
@@ -11,6 +12,7 @@
     "@types/node": "^16.7.13",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
+    "@uniswap/redux-multicall": "^1.1.8",
     "axios": "^1.3.4",
     "big.js": "^6.2.1",
     "buffer": "^6.0.3",
@@ -24,6 +26,7 @@
     "react-hook-form": "^7.43.1",
     "react-hot-toast": "^2.4.0",
     "react-otp-input": "^2.4.0",
+    "react-redux": "^8.0.5",
     "react-router-dom": "6.0",
     "react-scripts": "5.0.1",
     "react-select": "^5.7.0",
@@ -39,7 +42,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "prepare": "!is-ci || husky install",
+    "prepare": "is-ci || husky install",
     "typecheck": "tsc --project tsconfig.json --noEmit",
     "prettier": "prettier --write --ignore-unknown --cache ./src",
     "eslint": "eslint ./src",
