feature: added loaders

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.1",
     "react-hot-toast": "^2.4.0",
+    "react-loading-skeleton": "^3.2.0",
     "react-otp-input": "^2.4.0",
     "react-router-dom": "6.0",
     "react-scripts": "5.0.1",
