--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-router-dom": "6.0",
     "react-scripts": "5.0.1",
     "react-select": "^5.7.0",
+    "react-tooltip": "^5.9.1",
     "styled-components": "^5.3.6",
     "typescript": "^4.9.5",
     "validator": "^13.9.0",
