--- a/package.json
+++ b/package.json
@@ -31,10 +31,11 @@
     "react-router-dom": "6.0",
     "react-scripts": "5.0.1",
     "react-select": "^5.7.0",
+    "styled-components": "^5.3.6",
     "tiny-invariant": "^1.3.1",
     "toformat": "^2.0.0",
-    "styled-components": "^5.3.6",
     "typescript": "^4.9.5",
+    "uuid": "^9.0.0",
     "validator": "^13.9.0",
     "wagmi": "^0.11.5",
     "web-vitals": "^2.1.0"
@@ -75,6 +76,7 @@
     "@types/lodash": "^4.14.191",
     "@types/react-router-dom": "^5.3.3",
     "@types/react-select": "^5.0.1",
+    "@types/uuid": "^9.0.1",
     "@types/validator": "^13.7.12",
     "@typescript-eslint/eslint-plugin": "^5.49.0",
     "eslint": "^8.33.0",
