--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "classnames": "^2.3.2",
     "ethers": "^5",
     "jotai": "^2.0.2",
-    "jsbi": "^4.3.0",
+    "jsbi": "3.2.5",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-calendar": "^4.0.0",
