fix for missing abi types

--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -10,7 +10,8 @@ jobs:
           node-version: 16
       - run: yarn
       - name: Run checks
-        run: npx tsc -p tsconfig.json --noEmit
+        run: npm run typechain
+      - run: npx tsc -p tsconfig.json --noEmit
       - run: npx eslint
       - run: npx prettier --check ./src
       - run: echo "🍏 Done"
