--- a/package.json
+++ b/package.json
@@ -49,13 +49,12 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "prepare": "is-ci || husky install",
+    "prepare": "is-ci || husky install && npm run typechain",
     "typecheck": "tsc --project tsconfig.json --noEmit",
     "prettier": "prettier --write --ignore-unknown --cache ./src",
     "eslint": "eslint ./src",
     "typechain": "typechain --target ethers-v5 --out-dir ./src/utils/abis/types './src/utils/abis/contracts/*'"
   },
-  "postinstall": "typechain",
   "eslintConfig": {
     "extends": [
       "react-app",
