--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-scripts": "5.0.1",
     "react-select": "^5.7.0",
     "react-tooltip": "^5.9.1",
+    "socket.io-client": "^4.7.1",
     "styled-components": "^5.3.6",
     "tiny-invariant": "^1.3.1",
     "toformat": "^2.0.0",
