--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-hot-toast": "^2.4.0",
     "react-loading-skeleton": "^3.2.0",
     "react-otp-input": "^2.4.0",
+    "react-query": "^3.39.3",
     "react-redux": "^8.0.5",
     "react-router-dom": "6.0",
     "react-scripts": "5.0.1",
