--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     ]
   },
   "devDependencies": {
+    "@emotion/react": "^11.11.1",
     "@typechain/ethers-v5": "^10.2.0",
     "@types/big.js": "^6.1.6",
     "@types/lodash": "^4.14.191",
@@ -94,6 +95,7 @@
     "eslint-plugin-prettier": "^4.2.1",
     "husky": ">=6",
     "is-ci": "^3.0.1",
+    "jotai-devtools": "^0.6.0",
     "lint-staged": ">=10",
     "prettier": "^2.8.3",
     "tailwindcss": "^3.2.4",
